added Rohit name

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>Hello world! my name is Sonali </h1>
 <h1>Hello world! my name is palak</h1>
+<h1>Hello world! my name is rohit</h1>
 <p>This is the first file in my new Git Repo.</p>
 
 </body>
