--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Hello World!</title>
 </head>
 <body>
-
+	<h2>test</h2>
 <h1>Hello world! my name is palak</h1>
 <p>This is the first file in my new Git Repo.</p>
 
